--- a/PhoneStore/PhoneStore.csproj
+++ b/PhoneStore/PhoneStore.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.2.20159.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0-preview.2.20159.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-preview.2.20159.4" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0-preview2" />
     </ItemGroup>
 
     <ItemGroup>
